# code-briefcase

./: .code-briefcaseignore  .gitignore  CONTRIBUTING.md  FORK.md  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
code_briefcase/: __init__.py  analysis.py  api.py  ast_extractor.py  cfg_extractor.py  change_impact.py  cli.py  context_pack.py  cross_file_calls.py  daemon.py  dedup.py  dfg_extractor.py  diagnostics.py  dirty_flag.py  durability.py  hook_installer.py  hybrid_extractor.py  incremental_parse.py  install_swift.py  mcp_server.py  patch.py  pdg_extractor.py  salsa.py  semantic.py  session_warm.py  signature_extractor_pygments.py  stacked_db.py  stats.py  telemetry.py  tldrignore.py  tsc_cache.py  workspace.py
code_briefcase/daemon/: __init__.py  __main__.py  cached_queries.py  core.py  protocol.py  startup.py
code_briefcase/daemon/watchers/: __init__.py  base.py  supervisor.py  typescript.py
code_briefcase/hooks/: __init__.py  compact.py  edit.py  file_context.py  opencode_adapter.py  outcome.py  path_policy.py  permission.py  post_edit.py  prompt.py  read.py  runner.py  runtime.py  session.py  signature_render.py  tool.py
docs/: CODE_BRIEFCASE.md  TLDR.md  architecture-brief.md  watch-diagnostics.md
docs/dev-notes/: 2026-05-25-lsp-spike-decision.md  agent_hook_surfaces_2026-05-20.md  outcome-telemetry.md  oxfmt_behavior.md  oxlint_behavior.md  tsc_allowjs_behavior.md
docs/plans/: 0001-oxlint-oxfmt-and-related-improvements.md  2026-05-16-agent-context-integration.md  2026-05-19-tldr-efficacy-evaluation.md  2026-05-24-language-server-daemon.md  2026-05-24-pre-tool-shell-context-redesign.md
scripts/: backfill_tldr_outcomes.py  check.sh  dogfood_agent_context.py  dogfood_diagnostics.py  evaluate_tldr_usage.py  install_vendored.py  perception_eval.py  render_tldr_outcome_report.py  smoke_current_cli_hooks.py  tldr_outcome_model.py  watch_diagnostics_checkpoint.py
tests/: conftest.py  test_backfill_tldr_outcomes.py  test_cli_args.py  test_cli_hooks_pack.py  test_cli_structure_language.py  test_command_exec.py  test_commonjs.py  test_context_pack.py  test_current_cli_hook_shapes.py  test_daemon_mcp_contracts.py  test_daemon_protocol.py  test_daemon_startup.py  test_daemon_stats.py  test_daemon_watch_cli.py  test_diagnostics_config.py  test_diagnostics_js_typecheck.py  test_diagnostics_local_bin.py  test_diagnostics_oxfmt.py  test_diagnostics_oxlint.py  test_diagnostics_project_js_ts.py  test_evaluate_tldr_usage.py  test_hook_framing_perception.py  test_hook_installer.py  test_hooks_edit.py  test_hooks_outcome.py  test_hooks_permission.py  test_hooks_post_edit.py  test_hooks_prompt.py  test_hooks_read.py  test_hooks_runtime.py  test_hooks_session.py  test_hooks_tool.py  test_language_wiring.py  test_luau_cfg.py  test_luau_dfg.py  test_luau_hybrid.py  test_luau_imports.py  test_luau_pdg.py  test_mcp_project_resolution.py  test_opencode_adapter.py  (+14 more)
tests/fixtures/: oxlint_sample.json  oxlint_sample.ts  ts_destructured_import.ts
tests/fixtures/eval/: claude_session.jsonl  codex_session.jsonl  tldr_telemetry.jsonl
tests/fixtures/hooks/: codex_permission_request_bash.json  codex_session_start.json  (+20 more)
tldr/: api.py  cfg_extractor.py  cli.py  context_pack.py  cross_file_calls.py  dedup.py  dfg_extractor.py  diagnostics.py  hook_installer.py  hybrid_extractor.py  incremental_parse.py  mcp_server.py  patch.py  salsa.py  semantic.py  telemetry.py  tsc_cache.py
tldr/daemon/: cached_queries.py  core.py  startup.py
tldr/hooks/: __init__.py  edit.py  outcome.py  path_policy.py  post_edit.py  read.py  runner.py  runtime.py  session.py  tool.py
